[persona]fix dependency

--- a/vertigo-persona-impl/pom.xml
+++ b/vertigo-persona-impl/pom.xml
@@ -15,16 +15,23 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.vertigo</groupId>
-			<artifactId>vertigo-persona-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-				
-		<dependency>
-			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
+	
+		<dependency>
+			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-persona-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+				
 
 		<dependency>
 			<groupId>io.vertigo</groupId>
