--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -37,6 +37,7 @@
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-commons-impl</artifactId>
 			<version>${project.version}</version>
+			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
 		
@@ -64,13 +65,13 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>4.10.0</version>
+			<version>4.9.1</version> <!-- 4.9.1 compatible with ElasticSearch 1.3.4 -->
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
-			<version>4.10.0</version>
+			<version>4.9.1</version> <!-- 4.9.1 compatible with ElasticSearch 1.3.4 -->
 			<optional>true</optional>
 		</dependency>
 
@@ -102,19 +103,19 @@
 		</dependency>
 
 		<!-- Search -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-solrj</artifactId>
 			<version>4.10.0</version>
-			<optional>true</optional><!-- plugins.solr -->
-		</dependency>
+			<optional>true</optional> <!- plugins.solr ->
+		</dependency> -->
 		<!-- Because solr does not manage her own dependencies properly -->
 
-		<dependency>
+		<!--dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.1.3</version>
-		</dependency>
+		</dependency-->
 
 		<!-- Distributed -->
 		<dependency>
@@ -151,30 +152,11 @@
 		<!-- /Distributed -->
 
 		<dependency>
-			<!--Embedded Server for tests -->
-			<artifactId>solr-core</artifactId>
-			<groupId>org.apache.solr</groupId>
-			<version>4.10.0</version>
-			<optional>true</optional><!-- EmbeddedSolrSearchServicesPlugin -->
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.hadoop</groupId>
-  					<artifactId>hadoop-annotations</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>woodstox</groupId>
-					<artifactId>wstx-asl</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>antlr</groupId>
-					<artifactId>antlr</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.eclipse.jetty.orbit</groupId>
-					<artifactId>javax.servlet</artifactId>
-				</exclusion>
-				<!-- exclusion> <groupId>commons-fileupload</groupId> <artifactId>commons-fileupload</artifactId> </exclusion -->
-			</exclusions>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>1.3.4</version>
+			<scope>test</scope>
+			<optional>true</optional><!-- EmbeddedElasticSearchSearchServicesPlugin -->
 		</dependency>
 
 		<!-- <dependency>
@@ -190,12 +172,13 @@
 			<version>1.6.6</version>
 		</dependency> -->
 
-		<dependency>
+		<!--<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
-			<optional>true</optional><!-- EmbeddedSolrSearchServicesPlugin -->
-		</dependency>
+			<scope>provided</scope>
+			<optional>true</optional><!- EmbeddedSolrSearchServicesPlugin ->
+		</dependency>-->
 		
 		<!--FileManager-->
 		<dependency>
