--- a/vertigo-persona-impl/pom.xml
+++ b/vertigo-persona-impl/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.vertigo</groupId>
@@ -7,52 +8,53 @@
 		<version>0.5.3-SNAPSHOT</version>
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
-	
+
 	<artifactId>vertigo-persona-impl</artifactId>
 	<packaging>jar</packaging>
 	<name>vertigo-persona-impl</name>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
 			<version>${project.version}</version>
+			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
-	
+		
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-persona-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-				
+
 
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-commons-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-commons-impl</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
-			
-		<!--persona-security-->
+
+		<!--persona-security -->
 		<dependency>
 			<groupId>jdom</groupId>
 			<artifactId>jdom</artifactId> <!-- XmlSecurityLoader -->
 			<version>1.0</version>
 		</dependency>
-		<!--/persona-security-->
+		<!--/persona-security -->
 	</dependencies>
-		
+
 </project>
