--- a/vertigo-bundle/pom.xml
+++ b/vertigo-bundle/pom.xml
@@ -103,13 +103,13 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>4.10.0</version>
+			<version>4.9.1</version> <!-- 4.9.1 compatible with ElasticSearch 1.3.4 -->
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
-			<version>4.10.0</version>
+			<version>4.9.1</version> <!-- 4.9.1 compatible with ElasticSearch 1.3.4 -->
 			<optional>true</optional>
 		</dependency>
 
@@ -129,17 +129,10 @@
 
 		<!-- Search -->
 		<dependency>
-			<groupId>org.apache.solr</groupId>
-			<artifactId>solr-solrj</artifactId>
-			<version>4.10.0</version>
-			<optional>true</optional><!-- plugins.solr -->
-		</dependency>
-		<!-- Because solr does not manage her own dependencies properly -->
-
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1.3</version>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>1.3.4</version>
+			<optional>true</optional><!-- EsSearchServicesPlugin -->
 		</dependency>
 
 		<!-- Distributed -->
@@ -169,29 +162,6 @@
 		    <optional>true</optional><!-- REDIS DistributedWork impl  -->
 		</dependency>
 		<!-- /Distributed -->
-
-		<dependency>
-			<!--Embedded Server for tests -->
-			<artifactId>solr-core</artifactId>
-			<groupId>org.apache.solr</groupId>
-			<version>4.10.0</version>
-			<optional>true</optional><!-- EmbeddedSolrSearchServicesPlugin -->
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.hadoop</groupId>
-  					<artifactId>hadoop-annotations</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>woodstox</groupId>
-					<artifactId>wstx-asl</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>antlr</groupId>
-					<artifactId>antlr</artifactId>
-				</exclusion>
-				<!-- exclusion> <groupId>commons-fileupload</groupId> <artifactId>commons-fileupload</artifactId> </exclusion -->
-			</exclusions>
-		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
