--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -102,19 +102,12 @@
 		</dependency>
 
 		<!-- Search -->
-		<!-- <dependency>
-			<groupId>org.apache.solr</groupId>
-			<artifactId>solr-solrj</artifactId>
-			<version>4.10.0</version>
-			<optional>true</optional> <!- plugins.solr ->
-		</dependency> -->
-		<!-- Because solr does not manage her own dependencies properly -->
-
-		<!--dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1.3</version>
-		</dependency-->
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>1.3.4</version>
+			<optional>true</optional><!-- EsSearchServicesPlugin -->
+		</dependency>
 
 		<!-- Distributed -->
 		<dependency>
@@ -150,12 +143,7 @@
 		</dependency>
 		<!-- /Distributed -->
 
-		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
-			<version>1.3.4</version>
-			<optional>true</optional><!-- EmbeddedElasticSearchSearchServicesPlugin -->
-		</dependency>
+		
 
 		<!-- <dependency>
 			<groupId>org.apache.commons</groupId>
