--- a/vertigo-dynamo-impl/src/test/java/io/vertigo/dynamock/domain/fileinfo/DtResources.properties
+++ b/vertigo-dynamo-impl/src/test/java/io/vertigo/dynamock/domain/fileinfo/DtResources.properties
@@ -1,16 +1,14 @@
 ################################################################################");
 # Attention ce fichier est généré automatiquement !");
-# Resources du module io.vertigo.dynamock.domain.car;
+# Resources du module io.vertigo.dynamock.domain.fileinfo;
 ################################################################################");
 
-FLD_CAR$ID = identifiant de la voiture
-FLD_CAR$MAKE = Constructeur
-FLD_CAR$MODEL = ModÃ¨le
-FLD_CAR$DESCRIPTION = Descriptif
-FLD_CAR$YEAR = AnnÃ©e
-FLD_CAR$KILO = KilomÃ©trage
-FLD_CAR$PRICE = Prix
-FLD_CAR$MOTOR_TYPE = Type de moteur
+FLD_KX_FILE_INFO$FIL_ID = Identifiant
+FLD_KX_FILE_INFO$FILE_NAME = Nom
+FLD_KX_FILE_INFO$MIME_TYPE = Type mime
+FLD_KX_FILE_INFO$LENGTH = Taille
+FLD_KX_FILE_INFO$LAST_MODIFIED = Date de derniÃ¨re modification
+FLD_KX_FILE_INFO$FILE_DATA = data
 
 ################################################################################");
 
