--- a/vertigo-tempo-impl/pom.xml
+++ b/vertigo-tempo-impl/pom.xml
@@ -23,6 +23,13 @@
 		
 		<dependency>
 			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-commons-impl</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-commons-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
