--- a/vertigo-tempo-impl/pom.xml
+++ b/vertigo-tempo-impl/pom.xml
@@ -35,6 +35,13 @@
 				
 		<dependency>
 			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-dynamo-impl</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+				
+		<dependency>
+			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-tempo-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
