--- a/vertigo-quarto-impl/pom.xml
+++ b/vertigo-quarto-impl/pom.xml
@@ -118,7 +118,7 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>2.9</version>
 				<executions>
-					<execution>
+					<execution> <!-- For testing purpose, dependencies must be copied in target in order to launch a standalone node -->
 						<id>copy-dependencies</id>
 						<phase>test-compile</phase>
 						<goals>
