--- a/vertigo-vega-impl/pom.xml
+++ b/vertigo-vega-impl/pom.xml
@@ -130,12 +130,44 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency> <!-- For Rest Webservice testing -->
+		
+		<!-- For Rest Webservice testing -->
+		<dependency>
 	      <groupId>com.jayway.restassured</groupId>
 	      <artifactId>rest-assured</artifactId>
 	      <version>2.3.4</version>
 	      <scope>test</scope>
 		</dependency>
+		
+		<!-- exporter For Rest Webservice export testing -->
+	    <dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>4.2.1</version> <!-- dernière version en license LGPL/MPL -->
+			<scope>test</scope>
+			<exclusions>
+				<!-- BouncyCastle est utilisé pour ouvrir les pdf sécurisés Donc non utilisé pour les générations. -->
+				<exclusion>
+					<groupId>bouncycastle</groupId>
+					<artifactId>bcmail-jdk14</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>bouncycastle</groupId>
+					<artifactId>bcprov-jdk14</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>bouncycastle</groupId>
+					<artifactId>bctsp-jdk14</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>xml-apis</groupId>
+			<artifactId>xml-apis</artifactId>
+			<version>1.3.04</version> <!-- com.lowagie 4.2.0 contient la 1.0.b2 qui est incompatible avec le jdk 7 (sur Node) -->
+			<scope>test</scope>		
+		</dependency>
+		<!--/exporter-->
 		
 		<dependency>
 			<groupId>com.sleepycat</groupId>
