--- a/vertigo-commons-api/pom.xml
+++ b/vertigo-commons-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.7.1-SNAPSHOT</version>
+		<version>0.7.1</version>
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
