--- a/vertigo-vega-impl/pom.xml
+++ b/vertigo-vega-impl/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.7.2</version>
+		<version>0.7.3-SNAPSHOT</version>
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
@@ -65,7 +65,8 @@
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-ccc</artifactId>
-			<version>${project.version}</version>			
+			<version>${project.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
