[studio] fix unit tests

--- a/vertigo-studio/src/test/java/io/vertigo/studio/tools/testFile.properties
+++ b/vertigo-studio/src/test/java/io/vertigo/studio/tools/testFile.properties
@@ -1,2 +1,3 @@
+boot.applicationConfiguration = /META-INF/managers-mda.xml
+
 kpr 		= io/vertigo/dynamock/executionWfileinfo.kpr
-applicationConfiguration = /META-INF/managers-mda.xml
