--- a/vertigo-studio/src/test/java/io/vertigo/studio/tools/testSql.properties
+++ b/vertigo-studio/src/test/java/io/vertigo/studio/tools/testSql.properties
@@ -1,2 +1,3 @@
+boot.applicationConfiguration = /META-INF/managers-mda-sql.xml
+
 kpr 		= io/vertigo/dynamock/generation.kpr
-applicationConfiguration = /META-INF/managers-mda-sql.xml
