--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -39,8 +39,8 @@
 		<dependency>
 			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
-			<version>2.7.6</version>
-			<optional>true</optional><!-- pour JaninoExpressionEvaluatorPlugin -->
+			<version>2.7.7</version>
+			<optional>false</optional><!-- pour JaninoExpressionEvaluatorPlugin -->
 		</dependency>
 	</dependencies>
 </project>
