--- a/vertigo-ccc/pom.xml
+++ b/vertigo-ccc/pom.xml
@@ -38,5 +38,15 @@
 			<artifactId>spark-core</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		
+		<!-- Redis  -->
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+   			 <version>2.5.2</version>
+		    <optional>true</optional>
+		</dependency>
+		<!-- /Distributed -->
+		
 	</dependencies>
 </project>
