--- a/vertigo-studio/pom.xml
+++ b/vertigo-studio/pom.xml
@@ -29,6 +29,7 @@
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-dynamo-impl</artifactId> <!-- For dynamock -->
 			<version>${project.version}</version>
+			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
 
