--- a/vertigo-struts2/pom.xml
+++ b/vertigo-struts2/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>0.7.4</version>
+		<version>0.7.5-SNAPSHOT</version>
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
