--- a/vertigo-bundle/pom.xml
+++ b/vertigo-bundle/pom.xml
@@ -249,7 +249,14 @@
 			<artifactId>unoil</artifactId>
 			<version>3.2.1</version>
 			<optional>true</optional>
-		</dependency>	
+		</dependency>
+		
+		<dependency>
+			<groupId>fr.opensagres.xdocreport</groupId> <!-- pour le plugin XDocReportConverterPlugin -->
+			<artifactId>fr.opensagres.xdocreport.converter.odt.odfdom</artifactId>
+			<version>1.0.5</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
