--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -191,6 +191,14 @@
 			<optional>true</optional>
 		</dependency>
 		 
+		 <!-- Jedis addon -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.5.2</version>
+		</dependency>
+		<!-- /Jedis -->
+		
 		 <!-- dependency>
 			Waiting update from ODSExporter from 0.7 to 0.8.7 
 			<groupId>org.odftoolkit</groupId>
