[Dynamo] Added dep to commons-api

--- a/vertigo-dynamo-api/pom.xml
+++ b/vertigo-dynamo-api/pom.xml
@@ -18,6 +18,12 @@
 			<artifactId>vertigo-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.vertigo</groupId>
+			<artifactId>vertigo-commons-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 		
 </project>
